added basic structure to the cv index page. Edited the cv show page to fix a syntax error that prevented the page from rendering

--- a/app/views/cvs/show.html.erb
+++ b/app/views/cvs/show.html.erb
@@ -1,6 +1,4 @@
-<p> The CV show page </p>
+<h1> CV show page </h1>
 
-<% @cv.each do |resume| %>
-<%= @cv.title %>
-<%= @cv.content %>
-<% end %>
+<p>Title: <%= @cv.title %></p>
+<p>Content: <%= @cv.content %></p>
