--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,8 @@
   <div class="row w-100">
     <div class="col-md-6 mx-auto text-center">
 
+      <%= image_tag "logo.png", class: "img-fluid", style: "width:250px; height:250px;" %>
+
       <h1>CV Sensei</h1>
       <h2>Create. Improve. Stand out.</h2>
       <h4>Your next opportunity starts with a stronger CV – let’s build it together.</h4>
