--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
 
         <%= f.error_notification %>
 
-        <div class="form-inputs">
+        <div class="form-inputs" data-bs-theme="light">
           <%= f.input :email,
                       required: true,
                       autofocus: true,
@@ -26,7 +26,7 @@
         </div>
 
         <div class="form-actions mt-3">
-          <%= f.button :submit, "Sign up", class: "btn btn-dark w-100" %>
+          <%= f.button :submit, "Sign up", class: "btn btn-success w-100" %>
         </div>
 
       <% end %>
