--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,7 +26,7 @@
         </div>
 
         <div class="form-actions mt-3">
-          <%= f.button :submit, "Sign up", class: "btn btn-success w-100" %>
+          <%= f.button :submit, "Sign up", class: "btn w-100" %>
         </div>
 
       <% end %>
