fixed border colour on buttons to match new theme colour

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,7 +1,9 @@
 .btn {
   background-color: $button-color;
+  border-color: $button-color;
 
    &:hover {
     background-color: $button-hover;
+    border-color: $button-hover;
   }
 }
