Started adding sidebar

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,3 +1,21 @@
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-2">
+      <div class="off-canvas off-canvas-start show" id="chats-side-bar">
+        <div class="off-canvas-header">
+          <h5 class="off-canvas-title" id="chats-side-bar-label">Your chats</h5>
+          <button class="btn-close"></button>
+        </div>
+        <div class="off-canvas-body">
+
+        </div>
+      </div>
+    </div>
+    <div class="col-md-10">
+    </div>
+  </div>
+</div>
+
 <h1><%= @chat.title %></h1>
 
 <h3>Your messages</h3>
