--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,23 +1,40 @@
-<h1><%= @chat.title %></h1>
 
-<h3>Your messages</h3>
-<div class="list-group">
-  <% @messages.each do |m| %>
-    <% if m.role == "user" %>
-      <div class="list-group-item px-5 text-start">
-        <%= m.content %>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <h1><%= @chat.title %></h1>
+      <h3>Your messages</h3>
+
+      <div class="list-group">
+        <% @messages.each do |m| %>
+          <% if m.role == "user" %>
+            <div class="list-group-item px-5 text-start">
+              <%= m.content %>
+            </div>
+          <% else %>
+            <div class="row justify-content-center">
+              <%= m.content %>
+            </div>
+          <% end %>
+        <% end %>
       </div>
-    <% else %>
-      <div class="list-group-item px-5 text-center">
-        <%= m.content %>
-      </div>
-    <% end %>
-  <% end %>
+
+    </div>
+  </div>
 </div>
 
-<h3>Create a new message</h3>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <h3>Create a new message</h3>
 
-<%= simple_form_for [@cv, @chat, @message] do |form| %>
-  <%= form.input :content %>
-  <%= form.submit class: "btn btn-primary" %>
-<% end %>
+      <div class="form-inputs" data-bs-theme="light">
+        <%= simple_form_for [@cv, @chat, @message] do |form| %>
+          <%= form.input :content %>
+          <%= form.submit class: "btn btn-primary" %>
+        <% end %>
+      </div>
+
+    </div>
+  </div>
+</div>
