--- a/app/views/cvs/index.html.erb
+++ b/app/views/cvs/index.html.erb
@@ -1,15 +1,12 @@
 <div class="container text-center my-5">
   <h1 class="mb-4">Time to sensei your CV</h1>
-  <%= link_to "Add a new CV", new_cv_path, class: "btn btn-primary"%>
-  <div id="cvs-container" class="row my-3 justify-content-center">
-    <div class="col-8">
-      <% current_user.cvs.each do |cv| %>
-        <%= link_to cv_path(cv) do %>
-          <div class="mb-2 p-3 bg-primary bg-opacity-10 border border-primary rounded text-center">
-            <h4 class="mb-0"><%= cv.title %></h4>
-          </div>
-        <% end %>
-      <% end %>
-    </div>
+  <div class="d-flex justify-content-between align-items-end">
+    <h4 class="mb-0">Your CVs:</h4>
+    <%= link_to "Add a new CV", new_cv_path, class: "btn btn-primary"%>
+  </div>
+  <div class="row my-3">
+    <% current_user.cvs.each do |cv| %>
+    <%= link_to cv.title, cv_path(cv), class: "col p-3 bg-primary bg-opacity-10 border border-primary rounded" %>
+    <% end %>
   </div>
 </div>
