--- a/app/views/cvs/new.html.erb
+++ b/app/views/cvs/new.html.erb
@@ -1,15 +1,5 @@
-<h1 class="row justify-content-center">Add your existing CV</h1>
-
-<div class="container mt-5">
-  <div class="row justify-content-center">
-    <div class="col-md-8">
-      <div class="form-inputs" data-bs-theme="light">
-      <%= simple_form_for(@cv, html: { class: "cv-form" }) do |f| %>
-        <%= f.input :title, required: true%>
-        <%= f.input :content, required: true %>
-        <%= f.submit "submit CV", class: "btn btn d-block mx-auto mt-4" %>
-      <% end %>
-      </div>
-    </div>
-  </div>
-</div>
+<%= simple_form_for (@cv) do |f| %>
+  <%= f.input :title %>
+  <%= f.input :content %>
+  <%= f.submit "submit CV", class: "btn btn-primary" %>
+<% end %>
