fixed nested routes error for action of simple form action

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -46,7 +46,7 @@
               <h3>Create a new message</h3>
 
               <div class="form-inputs" data-bs-theme="light">
-                <%= simple_form_for [@cv, @chat, @message] do |form| %>
+                <%= simple_form_for [@chat, @message] do |form| %>
                   <%= form.input :content %>
                   <%= form.submit class: "btn btn-primary" %>
                 <% end %>
