Delete functions added

--- a/app/views/cvs/index.html.erb
+++ b/app/views/cvs/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container text-center my-5">
   <h1 class="mb-4">Time to sensei your CV</h1>
   <%= link_to "Add a new CV", new_cv_path, class: "btn btn-primary"%>
+
   <div id="cvs-container" class="row my-3 justify-content-center">
     <div class="col-8">
       <% current_user.cvs.each do |cv| %>
@@ -9,6 +10,7 @@
             <h4 class="mb-0"><%= cv.title %></h4>
           </div>
         <% end %>
+        <%= link_to "Delete a CV", cv_path(cv), data: { turbo_method: :delete }, class: "btn btn-primary"%>
       <% end %>
     </div>
   </div>
