--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -7,7 +7,8 @@
         <%= link_to chat_path(chat) do %>
           <div class="mb-2 p-3 bg-primary bg-opacity-10 border border-primary rounded d-flex justify-content-between align-items-end">
             <h4 class="mb-0"><%= chat.title %></h4>
-            <p class="mb-0"><%= link_to chat.cv.title, cv_path(chat.cv), class: "btn"%></p>
+            <p class="mb-0 d-flex justify-content-end"><%= link_to chat.cv.title, cv_path(chat.cv), class: "btn"%></p>
+            <p class="mb-0 d-flex justify-content-end"><%= link_to "Delete this chat", chat_path(chat), data: { turbo_method: :delete }, class: "btn"%></p>
           </div>
         <% end %>
       <% end %>
