--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <%= link_to "Skip to main content", "#main-content", class: "visually-hidden-focusable" %>
-  <header class="sticky-top">
+  <header>
     <%= render "shared/navbar" %> <!-- 👈 Add this for navbar -->
   </header>
 
