Changed stimulus sidebar to open and close actions

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -7,7 +7,7 @@
 
       <%# The open sidebar button %>
       <div id="chats-side-bar-open">
-        <i class="fa-solid fa-list-ul btn" data-action="click->toggle#call" data-toggle-target="openSidebar"></i>
+        <i class="fa-solid fa-list-ul btn" data-action="click->toggle#open" data-toggle-target="openSidebar"></i>
       </div>
 
       <%# The sidebar %>
@@ -15,7 +15,7 @@
 
         <%# The close sidebar button %>
         <div class="off-canvas-header">
-          <button class="btn-close" data-action="click->toggle#call"></button>
+          <button class="btn-close" data-action="click->toggle#close"></button>
           <h5 class="off-canvas-title">Your chats</h5>
         </div>
 
