Fixed navbar buttons not working

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-    <div class="col-md-11 sticky-top" style="top:70px;" data-toggle-target="contentCol">
+    <div class="col-md-11 pt-3" data-toggle-target="contentCol">
       <%# The page content goes here %>
 
       <h1 class="text-center">Let's get tailoring!</h1>
