--- a/app/views/cvs/show.html.erb
+++ b/app/views/cvs/show.html.erb
@@ -1,29 +1,64 @@
-<h1 class="row justify-content-center">Let's get tailoring!</h1>
+<div class="container-fluid">
+  <%# The row of the page %>
+  <div class="row" data-controller="toggle">
+    <%# The columns of the page %>
 
-<div class="d-flex align-items-start main-container mt-5">
+    <div class="col-md-1 vh-100 sticky-top pt-3" data-toggle-target="sidebarCol">
 
-  <div class="container mt-5">
-    <div class="row justify-content-start ps-5">
-      <div class="col-md-10">
-        <h2 class="mb-4">What we have so far:</h2>
-        <p>Title: <%= @cv.title %></p>
-        <p>Content: <%= @cv.content %></p>
+      <%# The open sidebar button %>
+      <div id="chats-side-bar-open">
+        <i class="fa-solid fa-list-ul btn btn-primary btn-lg" data-action="click->toggle#openSidebar" data-toggle-target="openSidebarButton"></i>
+      </div>
+
+      <%# The sidebar %>
+      <div class="off-canvas off-canvas-start d-none" id="chats-side-bar" data-toggle-target="sidebar">
+
+        <%# The close sidebar button %>
+        <div class="off-canvas-header d-flex justify-content-between mb-3">
+          <h5 class="off-canvas-title">Your chats</h5>
+          <button class="btn-close" data-action="click->toggle#closeSidebar"></button>
+        </div>
+
+        <%# The sidebar body %>
+        <div class="off-canvas-body">
+          <ul class="list-group list-group-flush mb-3">
+            <% @cv.chats.each do |chat| %>
+              <li class="list-group-item">
+                <%= link_to chat.title, chat_path(chat) %>
+              <% end %>
+            </li>
+          </ul>
+          <div class="off-canvas-header">
+            <%= link_to "Create a New Chat", cv_path(@cv), class: "btn btn-primary" %>
+          </div>
+        </div>
+
       </div>
     </div>
-  </div>
 
-  <div class="container mt-5">
-    <div class="row justify-content-center">
-      <div class="col-md-9">
-        <h2 class="mb-4">What role are you applying for? </h2>
-        <div class="form-inputs" data-bs-theme="light">
-          <%= simple_form_for [@cv, @chat] do |form| %>
-            <%= form.input :job_title, required: true %>
-            <%= form.input :job_description %>
-            <%= form.submit class: "btn btn d-block mx-auto mt-4" %>
-          <% end %>
+    <div class="col-md-11 pt-3" data-toggle-target="contentCol">
+      <%# The page content goes here %>
+      <h1 class="row justify-content-center">Let's get tailoring!</h1>
+
+      <div class="row">
+        <div class="col-6 mt-5">
+          <h2 class="mb-4">What we have so far:</h2>
+          <p>Title: <%= @cv.title %></p>
+          <p>Content: <%= @cv.content %></p>
+        </div>
+        <div class="col-6 mt-5">
+          <h2 class="mb-4">What role are you applying for? </h2>
+          <div class="form-inputs" data-bs-theme="light">
+            <%= simple_form_for [@cv, @chat] do |form| %>
+              <%= form.input :job_title, required: true %>
+              <%= form.input :job_description %>
+              <%= form.submit class: "btn btn d-block mx-auto mt-4" %>
+            <% end %>
+          </div>
         </div>
       </div>
+
     </div>
+
   </div>
 </div>
