Added update functionality

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,9 @@
 
       <h1>CV Sensei</h1>
       <h2>Create. Improve. Stand out.</h2>
-      <h4>Your next opportunity starts with a stronger CV – let’s build it together.</h4>
+      <h4>Your next opportunity starts with a stronger CV.</h4>
+
+      <%= link_to "Let’s build it together", cvs_path, class: "btn btn primary" %>
 
     </div>
   </div>
