--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -18,8 +18,13 @@
     <div class="off-canvas-body">
       <ul class="list-group list-group-flush mb-3">
         <% chats.each do |chat| %>
-          <li class="list-group-item">
+          <li class="list-group-item d-flex justify-content-between align-items-end">
             <%= link_to chat.title, chat_path(chat) %>
+
+            <%= link_to chat_path(chat), class: "text-danger", data: { turbo_method: :delete } do %>
+              <i class="fa-solid fa-trash"></i>
+            <% end %>
+
           <% end %>
         </li>
       </ul>
