--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,30 +1,35 @@
 .cvcard {
   margin-top: 5px;
-  display: flex-auto;
-  flex-wrap: wrap;
-  // position: absolute;
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   background: $orange-400;
-  padding: 20px;
+  padding: 18px;
   border: 1.5px solid $orange-700;
   text-align: center;
   border-radius: 7px;
   box-shadow: 2px 2px 1px;
   height: 150px;
-  width: 150px;
+  max-width: 150px;
+
+  p {
+    text-overflow: ellipsis;
+    font-size: 16px;
+  }
 }
 
 .cvcard a {
   color: $background-dark;
   font-size: 18px;
 
-     &:hover {
+  &:hover {
     color: white;
-    }
   }
+}
 
-// .cvcardbin {
-//   position: relative;
-//   top: 20px;
-// }
+.cvcardbin {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+}
