--- a/app/views/cvs/index.html.erb
+++ b/app/views/cvs/index.html.erb
@@ -6,7 +6,7 @@
       <% current_user.cvs.each do |cv| %>
         <div class="cvcard m-2">
           <%= link_to cv_path(cv) do %>
-            <h4><%= cv.title %></h4>
+            <p><%= cv.title %></p>
           <% end %>
             <div class="cvcardbin">
               <%= link_to cv_path(cv), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this CV?" }, class: "btn btn-primary" do %>
