--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -9,7 +9,7 @@
     <div class="col-md-11 pt-3" data-toggle-target="contentCol">
       <%# The page content goes here %>
 
-      <h1 class="text-center">Let's get tailoring!</h1>
+      <h1 class="text-center"><%= @chat.title %></h1>
 
       <div class="row">
         <div class="col-5">
@@ -23,20 +23,23 @@
 
         </div>
         <div class="col-6">
-          <h1><%= @chat.title %></h1>
-          <h3>Your messages</h3>
-          <div class="list-group">
-            <% @messages.each do |m| %>
-              <% if m.role == "user" %>
-                <div class="list-group-item px-5 text-start">
-                  <%= raw(render_markdown(m.content)) %>
-                </div>
-              <% else %>
-                <div class="row justify-content-center">
-                  <%= raw(render_markdown(m.content)) %>
-                </div>
+
+          <h3>Chat with Sensei</h3>
+          <div class="container overflow-y-auto" style="height: 300px;">
+            <div class="list-group">
+              <% @messages.each do |m| %>
+                <% if m.role == "user" %>
+                  <div class="list-group-item px-5 text-start">
+                    <%= raw(render_markdown(m.content)) %>
+                  </div>
+                <% else %>
+                  <div class="row justify-content-center">
+                    <%= raw(render_markdown(m.content)) %>
+                  </div>
+                <% end %>
               <% end %>
-            <% end %>
+            </div>
+
           </div>
           <h3>Create a new message</h3>
           <div class="form-inputs" data-bs-theme="light">
