--- a/app/views/cvs/new.html.erb
+++ b/app/views/cvs/new.html.erb
@@ -7,7 +7,7 @@
       <%= simple_form_for(@cv, html: { class: "cv-form" }) do |f| %>
         <%= f.input :title, required: true%>
         <%= f.input :content, required: true %>
-        <%= f.submit "submit CV", class: "btn btn d-block mx-auto mt-4" %>
+        <%= f.submit "Submit CV", class: "btn btn d-block mx-auto mt-4" %>
       <% end %>
       </div>
     </div>
