--- a/app/views/cvs/show.html.erb
+++ b/app/views/cvs/show.html.erb
@@ -16,8 +16,11 @@
           <div class="row">
             <div class="col-6 mt-5">
               <h2 class="mb-4">What we have so far:</h2>
-              <p>Title: <%= @cv.title %></p>
-              <p>Content: <%= @cv.content %></p>
+              <%= simple_form_for(@cv, html: { class: "cv-form" }) do |f| %>
+                <%= f.input :title, required: true%>
+                <%= f.input :content, required: true %>
+                <%= f.submit "Update CV", class: "btn btn d-block mx-auto mt-4" %>
+              <% end %>
             </div>
             <div class="col-6 mt-5">
               <h2 class="mb-4">What role are you applying for? </h2>
