--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,35 +1,55 @@
+
 <nav class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "/", class: "navbar-brand" do %>
+    <%= link_to root_path, class: "navbar-brand" do %>
       <%= image_tag "logo.png" %>
     <% end %>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto text-light">
-        <% if user_signed_in? %>
 
-          <li class="nav-item">
+      <ul class="navbar-nav ms-auto text-light">
+        <% if user_signed_in? %>
+          <li class="nav-item mx-2">
             <%= link_to "Home", root_path, class: "nav-link" %>
           </li>
-          <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "user.png", class: "avatar", alt: "dropdown menu" %>
-          </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "CV Dashboard", cvs_path, class: "dropdown-item" %>
-              <%= link_to "All Chats", chats_path, class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
+
+          <li class="nav-item mx-2">
+            <%= link_to "CV Dashboard", cvs_path, class: "nav-link" %>
           </li>
+
+          <li class="nav-item mx-2">
+            <%= link_to "Logout",
+                        destroy_user_session_path,
+                        data: { turbo_method: :delete },
+                        class: "nav-link" %>
+          </li>
+
+
+          <li class="nav-item mx-2">
+            <%= link_to "#" do %>
+              <%= image_tag "user.png",
+                            class: "avatar",
+                            alt: "User profile" %>
+            <% end %>
+          </li>
+
         <% else %>
-          <li class="nav-item">
+          <li class="nav-item mx-2">
             <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
           </li>
-          <li class="nav-item">
+
+          <li class="nav-item mx-2">
             <%= link_to "Login", new_user_session_path, class: "nav-link" %>
           </li>
         <% end %>
