--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -4,10 +4,10 @@
 $red: #FD1015;
 $blue: #0D6EFD;
 $yellow: #FFC65A;
-$orange: #E67E22;
+$warning_orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
 $background-dark:#1d1e27;
-$button-color: #FD742D;
-$button-hover: #cf5c23;
+$orange: #FD742D;
+$dark_orange: #cf5c23;
