--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -35,7 +35,7 @@
                   </div>
                 </div>
               <% else %>
-                <div class="d-flex justify-content-start mb-5">
+                <div class="d-flex justify-content-start mb-5 text-primary">
                   <div class="px-3 pb-0 pt-3">
                     <%= raw(render_markdown(m.content)) %>
                   </div>
