Fixed update cv buttons bootstrap classes

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -18,7 +18,7 @@
 
             <%= simple_form_for(@cv, html: { class: "cv-form", turbo_method: :patch }) do |f| %>
               <%= f.input :content, required: true %>
-              <%= f.submit "Update CV", class: "btn btn primary" %>
+              <%= f.submit "Update CV", class: "btn btn-primary" %>
             <% end %>
 
         </div>
