--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,6 +8,6 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
-$background-dark:#1d1e27;
+$background-dark:#00021b;
 $button-color: #FD742D;
 $button-hover: #cf5c23;
