--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,10 +1,13 @@
 
-h1 {
+
+.home-container {
+  h1 {
   font-size: 60px;
   font-weight: 600;
   text-shadow: #ab590d 1px 0 20px;
-}
+  }
 
-h2 {
+  h2 {
   font-weight: 800;
+  }
 }
