--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -11,7 +11,7 @@
   border-radius: 7px;
   box-shadow: 2px 2px 1px;
   height: 200px;
-  max-width: 200px;
+  // max-width: 200px;
 
   p {
     text-overflow: ellipsis;
