--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -17,7 +17,7 @@
           <p>Title: <%= @cv.title %></p>
 
             <%= simple_form_for(@cv, html: { class: "cv-form", turbo_method: :patch }) do |f| %>
-              <%= f.input :content, required: true %>
+              <%= f.input :content, required: true, input_html: { class: "auto-expand", rows: 18 } %>
               <%= f.submit "Update CV", class: "btn btn-primary" %>
             <% end %>
 
